--- a/css/styles.css
+++ b/css/styles.css
@@ -78,11 +78,11 @@ main > .tagline {
 	color: white;
 	font-size: 1.5rem
 }
-
 h2 {
 	padding: 60px;
 	text-align: justify;
 	background: 000000;
 	color: white;
 	font-size: 1.5rem
+	text-indent: 50px;
 }	
