--- a/css/styles.css
+++ b/css/styles.css
@@ -75,15 +75,17 @@ main > .tagline {
 	padding: 60px;
 	text-align: center;
 	background: 000000;
-	color: grey;
+	color: black;
 	font-size: 1.5rem
+	font_family: 'Courier New', serif
+	font-variant: small-caps
 	p.double {border-style: double;}
 }
 h2 {
 	padding: 60px;
 	text-align: justify;
 	background: 000000;
-	color: grey;
+	color: black;
 	font-size: 1.5rem
 }
 p {	text-indent: 50px;
