--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,8 @@ main > .tagline {
 	background: 000000;
 	color: black;
 	font-size: 1.5rem
-	font-family: 'Courier New', serif
+}
+h1 {	font-family: 'Courier New', serif
 	font-variant: small-caps
 	border-style: double
 	border-width: 2px
