--- a/css/styles.css
+++ b/css/styles.css
@@ -78,10 +78,10 @@ main > .tagline {
 	color: black;
 	font-size: 1.5rem
 }
-h1 {	font-family: 'Courier New', serif
-	font-variant: small-caps
-	border-style: double
-	border-width: 2px
+h1 {	font-family: 'Courier New', serif;
+	font-variant: small-caps;
+	p.double {border-style: double;}
+	border-width: 2px;
 	border-color: 440c0c
 }
 h2 {
