--- a/css/styles.css
+++ b/css/styles.css
@@ -80,8 +80,7 @@ main > .tagline {
 }
 h1 {	font-family: 'Courier New', serif;
 	font-variant: small-caps;
-	p.double {border-style: double;}
-	border-width: 2px;
+	border: 2px double black
 }
 h2 {
 	padding: 60px;
