--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ main > .tagline {
 	color: black;
 	font-size: 1.5rem;
 }
-h1 {	font-family: 'Courier New', serif;
+h1 {	font-family: 'Didot', serif;
 	font-variant: small-caps;
 	border: 5px double black;
 }
