--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,7 @@ main > .tagline {
 	height: 2.65rem;
 }
 
-.header {
+main > .header {
 	padding: 60px;
 	text-align: center;
 	background: 000000;
