--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ h2 {
 	background: 000000;
 	color: black;
 	font-size: 1.5rem;
-	text-align: 50px;
+	text-indent: 50px;
 }
 p {	text-indent: 50px;
 }
