--- a/css/styles.css
+++ b/css/styles.css
@@ -88,5 +88,13 @@ h2 {
 	background: 000000;
 	color: black;
 	font-size: 1.5rem;
+}
+div.a {
 	text-indent: 50px;
+}
+div.b {
+	text-indent: 50px;
+}
+div.c {
+	text-indent: 50px:
 }
