--- a/css/styles.css
+++ b/css/styles.css
@@ -98,3 +98,7 @@ div.b {
 div.c {
 	text-indent: 50px;
 }
+h3 {	font-family: 'Courier New', serif;
+	font-variant: small-caps;
+	border: 5px double black;
+}
