--- a/css/styles.css
+++ b/css/styles.css
@@ -103,3 +103,9 @@ h3 {	font-family: 'Courier New', serif;
 	border: 5px double black;
 	font-size: 1.5rem;
 }
+div.d {
+	text-indent: 50px;
+}
+div.e {
+	text-indent: 50px;
+}
