--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,10 @@ div.c {
 h3 {	font-family: 'Courier New', serif;
 	font-variant: small-caps;
 	border: 5px double black;
+	padding: 60px;
+	text-align: center;
+	background: 000000;
+	color: black;
 	font-size: 1.5rem;
 }
 div.d {
