--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ h1 {	font-family: 'Courier New', serif;
 	font-variant: small-caps;
 	border: 5px double black;
 }
-h2 {
+p1 {
 	padding: 60px;
 	text-align: justify;
 	background: 000000;
